PMD readability
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/jelly/trunk@136066 13f79535-47bb-0310-9956-ffa450edef68